# C-Web-Servers

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main  servidor_serial.c  test.sh
clientSRC/: CMakeLists.txt  argValidator.c  client  client.c  makefile
cliente/: CMakeLists.txt  cliente.c  makefile
commonSrc/: argValidator.c  commonHttpFunctions.c  mime.c  net.c
detener/: CMakeLists.txt  detener.c  makefile
headers/: argValidator.h  commonHttpFunctions.h  net.h
serverF/: CMakeLists.txt  main.c  makefile
serverPF/: CMakeLists.txt  main.c  makefile
serverPT/: CMakeLists.txt  main  main.c  makefile  net.c
serverPT/src/: main.c
serverS/: CMakeLists.txt  argValidator.h  main  main.c  makefile  mime.c
serverS/src/: main.c  net.c
serverT/: CMakeLists.txt  main  main.c  makefile
serverT/src/: main.c  mime.c
src/: main  main.c  net.c  net.h  server.c  server.h
